# coursework3

./: .gitignore  README.md  pyproject.toml
src/: func.py  main.py
tests/: test_func.py
